[tool.poetry]
name = "wikihow-videos"
version = "0.1.0"
description = ""
authors = ["duyixian <duyixian1234@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tencentcloud-sdk-python = "^3.0.391"
jupyterlab = "^3.0.15"
cos-python-sdk-v5 = "^1.9.4"
playwright = "^1.11.0"
motor = "^2.4.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.5b1", allow-prereleases = true}
pylint = "^2.8.2"
mypy = "^0.812"
pytest = "^6.2.4"
pytest-cov = "^2.11.1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
